Form element spacing fixes
 - Uses height: calc() on select box to correct the size for Firefox
 - Increases line-height while decreasing padding to keep descenders
   from clipping in Firefox
 - Reduces large line-height from 1.5666667, which is a bit strange, to
   1.5 (ok'd by Sebastian)

Switches test text to "Danielle Cage" so we can ses descenders.

--- a/stylesheets/components/form/_textbox.styl
+++ b/stylesheets/components/form/_textbox.styl
@@ -28,10 +28,10 @@
     height: auto
     display: block
     font-size: inherit
-    line-height: $line-height-000
+    line-height: $line-height-300
     color: $charles-blue
     border: $border-200 solid $charles-blue
-    padding: $sizing-400 $sizing-300
+    padding: $sizing-300 $sizing-300
     margin: 0
     // fixes Chrome 57 bug of not rendering left/right/bottom of the box shadow
     position: relative
